--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
      </header>
 
     <!-- ............ Home Section .................. -->
+    <img class="img1" src="images/mamun2.png" alt="">
      <section id="home" class="home">
       
       <div class="home-content">
